Bug 1643418. Don't overwrite the print range type if 'Print Selection Only' is unchecked. r=nordzilla

Differential Revision: https://phabricator.services.mozilla.com/D78394